--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+ <title>Instagram</title>
+ <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+ 
+ 
+ 
+ <div class="container">
+ <header>
+   <img src="./images/phones.png" alt="Iphone">
+ </header>
 
-  Capture and Share the World's Moments
+ <section>
+   <nav>
+     <img src="./images/brand.png" alt="Logo instagram">
+     <div>
+       <img src="./images/home.png" alt="Home">
+       <a href="#0"> Log in </a>
+   </div>
+   </nav>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   <div class="description">
+     <h1> Capture and Share the World's Moments </h1>
+     <p>Instagram is a <b>fast</b>, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+       Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+       Oh yeah, did we mention it's free?
+     </p>
+     <div class="bouton">
+        <img src="./images/badge-iphone.png" alt="apple">
+       <img src="./images/badge-android.png" alt="android">  
+     </div>
+   </div>
+ </section>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+ <div class="font">
+     <!-- <img src="./images/bgtile.png" alt=""> -->
+   </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
 </body>
+
+<!-- <footer>
+   <ul>
+   <li> About Us </li>
+   <li> Support </li>
+   <li> Blog </li>
+   <li> Press </li>
+   <li> API </li>
+   <li> Jobs </li>
+   <li> Privacy </li>
+   <li> Terms </li>
+   <li> &copy; 2014 Instagram</li>
+ </ul>
+ 
+ </footer> -->
+
 </html>
