--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+    <div class="font"></div>
+  <div class="both-content">
+      <div class="left-content">
+        <img src="images/phones.png">
+      </div>
 
-  Capture and Share the World's Moments
+    <section class="right-content">
+      <header>
+        <img src="images/brand.png">
+        <button class="login-btn"><img src="./images/home.png">Log in</button>
+      </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="content">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+        Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <img class="badges" src="./images/badge-iphone.png">
+          <img class="badges" src="./images/badge-android.png">
+      </div>
+    </section>
+  </div>
+
+
+<footer>
+  <a href="#0">About Us</a>
+  <a href="#0">Support</a>
+  <a href="#0">Blog</a>
+  <a href="#0">Press</a>
+  <a href="#0">API</a>
+  <a href="#0">Jobs</a>
+  <a href="#0">Privacy</a>
+  <a href="#0">Terms</a>
 
   &copy; 2014 Instagram
+
+</footer>
+
 </body>
 </html>
