--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <div class="bluebg">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+<div class="container">  
+<section>  
+  <img src="./images/phones.png" alt="phones"> 
+</section>
 
-  Download on the App Store
-  Get it on Google Play
+<section class="main">
+<div class="logos">
+  <img src="./images/brand.png" alt="brand">
+  <button class ="txtalign"><img src="./images/home.png" alt="home"> Log in</button>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div class="copy">
+  <h3>Capture and Share <br>the World's Moments</h3>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. </p>
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
+  <img src="./images/badge-iphone.png" alt="appstore">
+  <img src="./images/badge-android.png" alt="android">
+</div>
+</section>
+</div>
 
-  &copy; 2014 Instagram
+
+<footer>
+    <a href="#0">About Us</a>
+    <a href="#0">Support</a> 
+    <a href="#0">Blog</a> 
+    <a href="#0">Press</a> 
+    <a href="#0">API</a> 
+    <a href="#0">Jobs</a> 
+    <a href="#0">Privacy</a> 
+    <a href="#0">Terms</a> 
+    <a href="#0">&copy; 2014 Instagram</a> 
+
+</footer>
+</div>
+  
+
+  
 </body>
 </html>
