--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class = "container">
 
-  Capture and Share the World's Moments
+    <div class= "img-left">
+      <img src="images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class = "right">
+      <header>
+        <img class="logo-insta" src="images/brand.png">
+        <bouton>
+          <img class="bouton" src="images/home.png"> Log in
+        </bouton>
+      </header>
+      <div class ="paragraph">
+        <h2>Capture and Share <br>the World's Moments</h2>
+        <p>  Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
+        <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>  Oh yeah, did we mention it's free?
+        </p>
+        <div class="image-appli">
+          <img class="img-space" src="images/badge-iphone.png">
+          <img class="img-space" src="images/badge-android.png">
+        </div>
+      </div> 
+    </div>
+  </div>
+  <footer>
+     <a href ="#1">Support</a>
+     <a href ="#1">Blog</a>
+     <a href ="#1">Press</a>
+     <a href ="#1">API</a>
+     <a href ="#1">Jobs</a>
+     <a href ="#1">Privacy</a>
+     <a href ="#1">Terms</a>
+     <a class="instagram" href ="#1"> &copy; 2014 Instagram</a>
+  </footer>
 </body>
 </html>
