--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="/home/gus/code/week1/saturday/lab-css-instagram-clone/starter-code/css/main.css"
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+    <img src="/home/gus/code/week1/saturday/lab-css-instagram-clone/starter-code/images/phones.png" class="imagephone">
+    <img src="/home/gus/code/week1/saturday/lab-css-instagram-clone/starter-code/images/brand.png" class="imageinsta">
+    <button type="submit" class="boton"><img src="/home/gus/code/week1/saturday/lab-css-instagram-clone/starter-code/images/home.png">Log In></button>
+  <div class="div1">
+        Instagram
+</div>
+ 
+<div>
+  <div class="div2">
+    <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
+  <img src="/home/gus/code/week1/saturday/lab-css-instagram-clone/starter-code/images/badge-android.png">
+  <img src="/home/gus/code/week1/saturday/lab-css-instagram-clone/starter-code/images/badge-iphone.png">  
 
-  Oh yeah, did we mention it's free?
+   </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
+  <div>
+  About Us  
   Support
   Blog
   Press
@@ -25,6 +35,8 @@
   Jobs
   Privacy
   Terms
+  </div>
+</div>
 
   &copy; 2014 Instagram
 </body>
