--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,67 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+
+
 </head>
 <body>
-  Instagram
+  
+<div class="trClass">
+  <img src="./images/frame.png" id="framePic">
+</div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+ 
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div id="brandPic">
+  <img src="./images/brand.png">
+</div>
+<div class="firstClass">
+  
+    <div id="tdClass">
+        <img src="./images/phones.png">
+      </div> 
+    
+    
+  
+ <div id="twoColor"><h2>Capture and Share<br> the World's Moments</h2></div> 
 
-  &copy; 2014 Instagram
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+<br>
+  Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br>
+<br>
+  Oh yeah, did we mention it's free?<br>
+  <br>
+
+  <img src="./images/badge-iphone.png">   
+  <img src="./images/badge-android.png">
+</div>
+ 
+  
+<br>
+<br>
+<br>
+<div>
+    <div class="bottomClass">  
+        <a>About Us</a>
+        <a>Support</a>
+        <a>Blog</a>
+        <a>Press</a>
+        <a>API</a>
+        <a>Jobs</a>
+        <a>Privacy</a>
+        <a>Terms</a>
+      </div>
+      <div id="firstId">
+        &copy; 2014 Instagram
+      </div>  
+</div>
+
+
+ 
 </body>
 </html>
