--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -48,21 +48,21 @@
     <footer>
       <ul>
         <li>
-          <a href="">ABOUT US</li>
+          <a href="">ABOUT US</a></li>
         <li>
-          <a href="">SUPPORT</li>
+          <a href="">SUPPORT</a></li>
         <li>
-          <a href="">BLOG</li>
+          <a href="">BLOG</a></li>
         <li>
-          <a href="">PRESS</li>
+          <a href="">PRESS</a></li>
         <li>
-          <a href="">API</li>
+          <a href="">API</a></li>
         <li>
-          <a href="">JOBS</li>
+          <a href="">JOBS</a></li>
         <li>
-          <a href="">PRIVACY</li>
+          <a href="">PRIVACY</a></li>
         <li>
-          <a href="">TERMS</li>
+          <a href="">TERMS</a></li>
         <li id="copyright"> &copy; 2014 INSTAGRAM</li>
       </ul>
     </footer>
