--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,104 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class ="topSection">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class = "cameraImg">
+
+   <img src="./images/brand.png">
+
+  </div>
+
+  </div>
+  <div class="phoneImg">
+
+      <img src="./images/phones.png">
+
+
+    </div>
+
+    <div class ="frameImg">
+      <img src="./images/frame.png">
+    </div>
+
+
+
+
+<div class="box">
+<div class="title">
+  <h2>Capture and Share<br> the World's Moments</h2>
+</div>
+
+<div class="paragraph">
+  Instagram is a <b>fast, beautiful</b> and fun way to share your life<br>
+  with friends and family.<br>
+  <br>
+
+  Take a picture or video, choose a filter to transform its look<br> 
+  and feel, then post to Instagram &mdash; it's that easy. You can<br> 
+  even share to Facebook, Twitter, Tumblr and more. It's a<br>
+  new way to see the world.<br>
+  <br>
 
   Oh yeah, did we mention it's free?
+</div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div class="badgeImg">
 
-  &copy; 2014 Instagram
+  <img src="./images/badge-iphone.png">
+</div>
+
+
+<div class="androidImg">
+
+  <img src="./images/badge-android.png">
+</div>
+</div>
+
+<div class="about">
+<div class="bottom"><b>
+<a href="">About Us</a>&nbsp;
+<a href="">Support</a>&nbsp;
+<a href="">Blog</a>&nbsp;
+<a href="">Press</a>&nbsp;
+<a href="">API</a>&nbsp;
+<a href="">Jobs</a>&nbsp;
+<a href="">Privacy</a>&nbsp;
+<a href="">Terms</a>&nbsp;
+
+
+  &copy; 2014 Instagram</b>
+
+</div>
+</div>
+
+<div class="extraspace">
+</div>
+
+
+
+
+<div class="home">
+
+  <img src="./images/home.png">&nbsp;Log in
+
+
+</div>
+
+<div class="button">
+
+
+  </div>
+
+
 </body>
 </html>
