--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class = "header">
+    <div class = "insta-header">
+      <img src = "images/phones.png" class= "demo-img" alt = "iPhone Demo Screen"/>
+      <img src = "images/brand.png" class= "insta-logo" alt = "Instagram"/>
+      <button type="button" class= "login-button"><img src = "images/home.png" class = "home-icon" alt = "Home"/> Log in </button>
+    </div>
+    <div class = "insta-content">
+      <h1>Capture and Share<br>the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      <div class = "badges">
+        <img src = "images/badge-iphone.png" class = "badge-iphone" alt = "Download on the App Store"/>
+        <img src = "images/badge-android.png" class= "badge-android" alt = "Get it on Google Play"/>
+      </div> 
+    </div>
+  </section
+    <div class="divClear"></div>
+  <footer class = "footer">
+    <ul class = "footer-menu">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
