instagram clone done2

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,129 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+  <div class="wholePage">
+    <div class="secondWholePage">
+      <div class="leftPart1">
+        <div class="iphone1">
+          <img class="iphone2" src="images/phones.png" alt="">
 
-  Capture and Share the World's Moments
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="rightPart">
+          <div class="navBar1">
 
-  Download on the App Store
-  Get it on Google Play
+            <div class="instaPic">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            </div>
 
-  &copy; 2014 Instagram
+            <div class="title">
+                  <img class="logo" src="images/brand.png" alt="">
+            </div>
+
+
+            <div class="login">
+
+
+              <div class="ultimateButton">
+                <button class="loginButton" type="button" name="button">LOG IN
+                  <img class="house" src="images/home.png" alt="">
+
+                </button>
+
+              </div>
+
+
+
+
+            </div>
+
+          </div>
+
+        <div class="whiteBox">
+          <div class="secondTitle">
+            <h3 class="thirdTitle">
+              Capture and Share the World's Moments
+            </h3>
+
+          </div>
+          <div class="description">
+              <p>
+                Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+              </p>
+              <p>
+
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+              </p>
+              <p>
+                Oh yeah, did we mention it's free?
+
+              </p>
+
+          </div>
+
+          <div class="apps">
+            <div class="apple">
+              <img class="apple1" src="images/badge-iphone.png" alt="">
+            </div>
+
+            <div class="android">
+              <img class="android1" src="images/badge-android.png" alt="">
+
+            </div>
+
+          </div>
+
+
+        </div>
+
+
+        <div class="logos">
+
+        </div>
+
+
+    </div>
+
+
+
+    </div>
+    <div class="links">
+    About Us
+
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+      <div class="copyright">
+          &copy; 2014 Instagram
+      </div>
+
+    </div>
+
+
+
+
+
+  </div>
+
+
+
+
+
+
+
+
 </body>
 </html>
