--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,66 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!-- HEADER SECTION -->
+  <header class="main-header">
+      <div class="main-header__wrapper container">
+        <a href="#" class="main-header__login">
+          <img src="./images/home.png" alt="Login button">
+          <span>Log in</span>
+        </a>
+      <a href="#" class="main-header__brand">
+        <img src="./images/brand.png" alt="Instagramm image">
+      </a>
+      </div>
+    </header>
+  <!-- MAIN SECTION -->
+  <main class="main-content">
+    <div class=" main-wrapper container">
+      <div class="main-content__phone">
+        <img src="./images/phones.png" alt="Iphone photo">
+      </div>
+       <section class="main-content__description">
+         <div class="wrapper">
+           <h2 class="main-content__header">Capture and Share the World's Moments</h2>
+           <p class="main-content__text">
+             Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+           </p>
+           <p class="main-content__text">
+             Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+           </p>
+           <p class="main-content__text">
+             Oh yeah, did we mention it's free?
+           </p>
+           <div class="button-wrapper">
+             <a class="main-content__button" href="#">
+               <img src="./images/badge-iphone.png" alt="Iphone button">
+             </a>
+             <a class="main-content__button" href="#">
+               <img src="./images/badge-android.png" alt="Google market button">
+             </a>
+           </div>
+         </div>
+       </section>
+    </div>
+  </main>
+  <!-- FOOTER SECTION-->
+  <footer class="main-footer">
+    <div class="container clearfix">
+      <ul class="main-footer__list clearfix">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <span class="main-footer__copyright"> &copy; 2014 Instagram</span>
+    </div>
+  </footer>
 </body>
 </html>
