--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+<header>
+  <div class="header">
+      <img src="images/phones.png" alt="phones" class="phones">
+      <div class="header-container">
+        <img src="images/brand.png" alt="Instagram logo" class="logo">
+        <div class="login">
+          <img src="images/home.png" alt="home">
+          <a href='#'>Log in</a>
+        </div>
+      </div>
+  </div>
+</header>
+
 <body>
-  Instagram
+  <section class="content">
+    <h1>Capture and Share the World's Moments</h1>
+    <div class="description">
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <img src="images/badge-iphone.png" alt="Download on the App Store" class="apple-img">
+      <img src="images/badge-android.png" alt="Get it on Google Play" class="android-img">
+    </div>
+  </section>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <nav class="nav-bar"> 
+    <ul>
+      <li class="nav-bar-li"><a href='#about'>About Us</a></li>
+      <li class="nav-bar-li"><a href='#support'>Support</a></li>
+      <li class="nav-bar-li"><a href='#blog'>Blog</a></li>
+      <li class="nav-bar-li"><a href='#press'>Press</a></li>
+      <li class="nav-bar-li"><a href='#api'> API</a></li>
+      <li class="nav-bar-li"><a href='#jobs'>Jobs</a></li>
+      <li class="nav-bar-li"><a href='#privacy'>Privacy</a></li>
+      <li class="nav-bar-li"><a href='#terms'>Terms</a></li>
+      <li class="nav-bar-li"><p>&copy; 2014 Instagram</p></li>
+    </ul> 
+  </nav>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
