--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,7 @@
     <h1><img class="img-logo" src="./images/brand.png" alt="instagram logo"></h1>
     <button class="btn-LogIn">
       <img src="./images/home.png" alt="home">
-      <span>Log In</span>
+      <span class="span1">Log In</span>
     </button>
   </div>
   
@@ -32,16 +32,16 @@
   </div>
 
   <footer>
-    <a href="#">About Us</a>
-    <a href="#">Support</a>
-    <a href="#">Blog</a>
-    <a href="#">Press</a>
-    <a href="#">API</a>
-    <a href="#">Jobs</a>
-    <a href="#">Privacy</a>
-    <a href="#">Terms</a>
+    <a class="footerLink1" href="#">About Us</a>
+    <a class="footerLink" href="#">Support</a>
+    <a class="footerLink" href="#">Blog</a>
+    <a class="footerLink" href="#">Press</a>
+    <a class="footerLink" href="#">API</a>
+    <a class="footerLink" href="#">Jobs</a>
+    <a class="footerLink" href="#">Privacy</a>
+    <a class="footerLink" href="#">Terms</a>
 
-    &copy; 2014 Instagram
+    <span class="span2">&copy; 2014 Instagram</span>
   </footer>
   </body>
   </html>
