--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,7 @@
     <h1><img class="img-logo" src="./images/brand.png" alt="instagram logo"></h1>
     <button class="btn-LogIn">
       <img src="./images/home.png" alt="home">
-      <span class="span1">Log In</span>
+      <span class="span1">Log in</span>
     </button>
   </div>
   
