--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
+
+
+
+
+
 <body>
-  Instagram
+  <div class="bodydiv">
+    <div class="logologin">
+    <img class="brand" src="images/brand.png">
+    <div class="home">
+    <img src="images/home.png">
+    <b>Log In</b>
+    </div>
+    </div>
+<div class="description">
+  <div>
+  <h1>Capture and Share the World's Moments</h1>
+  </div>
 
-  Capture and Share the World's Moments
+  <div>
+    <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p> yeah, did we mention it's free?</p>
+  </div>
+  <div class="buy">
+  <img class="apple" src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
+</div>
+</div>
 
-  Oh yeah, did we mention it's free?
+  <img class="phone" src="images/phones.png">
 
-  Download on the App Store
-  Get it on Google Play
+<div class="info">
+   About Us
+   Support
+   Blog
+   Press
+   API
+   Jobs
+   Privacy
+   Terms
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+   <span class="tree">&copy; 2014 Instagram</span>
+</div>
+</div>
 </body>
 </html>
