Removed negative values

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,7 +17,7 @@
     <img class="img-phone" src="./images/phones.png" alt="phones">
   </div>
   <div class="bottom-half">
-  <h2>Capture and Share<br> the World's Moments</h2>
+  <h2>Capture and Share the World's Moments</h2>
     <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.</p>
     <p>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.</p>
     <p>Oh yeah, did we mention it's free?</p>
