--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="css/main.css">
 <html lang="en">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <h1 class='blue-background'><img class ="insta-logo" src="images/brand.png"></h1>
+  
+<div class = 'log-in-button'>
 
-  Capture and Share the World's Moments
+  <img class = 'log-in-logo' src = 'images/home.png'>
+  <h1 class = 'log-in'>
+    <a href = ''>Log in</a>
+  </h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img class = 'phone-pic' src = "images/phones.png">
+<section>
+  <h2>Capture and Share 
+  <br>
+  the World's Moments</h2>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+ <a href = ''><img class = 'app-store' src = 'images/badge-iphone.png'></a>
+ <a href = ''><img class = 'play-store' src = 'images/badge-android.png'></a>
+  </section>
+
+  <footer>
+  <a href=''>About Us</a>
+  <a href=''>Support</a>
+  <a href=''>Blog</a>
+  <a href=''>Press</a>
+  <a href=''>API</a>
+  <a href=''>Jobs</a>
+  <a href=''>Privacy</a>
+  <a href=''>Terms</a>
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
