--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,25 +5,33 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="row">
+  <img src="images/phones.png">
+  
+  <div class="column">
 
-  <div class="container">
-    <section>
-      <img src="images/phones.png">
-    </section>
-    <section>
-      <!-- <img src="images/brand.png" alt="Instagram" class="brand">
-      <p>Log in</p> -->
-      <div class="descr">
-          <h1>Capture and Share the World's Moments</h1>
-          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>funy</b> way to share your life with friends and family. <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>Oh yeah, did we mention it's free?
-         
-      </div>
+   <div class="insta">
+     <img src="images/brand.png" alt="Instagram" class="brand">
+     <button>Log in</button>
+   </div>
+
+    <div class="text">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>funny</b> way to share your life with friends and family. <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>Oh yeah, did we mention it's free?</p>
+    </div>
+
+    <div class="download">
       <div class="badge">
           <img src="images/badge-iphone.png" alt="Download on the Apple Store">
           <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
     </div>
-    </section>
+
   </div>
+  
+</div>
+ 
+
 
   <footer>
     <ul>
