--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,20 +2,35 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="outter-box">
+    <img src="images/phones.png">
+    <div class="inner-box">
+      <div class="icons">
+        <img src="images/brand.png">
+        <button type="button" class="log-in">
+          <img src="images/home.png">
+          <p>Log in</p>
+        </button>
+      </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Oh yeah, did we mention it's free?</p>
+
+      <button>Download on the App Store</button>
+      <button>Get it on Google Play</button>
+    </div>
+
+  </div>
 
   About Us
   Support
