--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet"  type="text/css" href="main.css">
 </head>
 <body>
+  <div class="bluebackground">
+    <p>Hola</p>
+  </div>
   Instagram
 
   Capture and Share the World's Moments
