upper part mostly done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  
+  <div class="iphones-image">
+    <img src="./images/phones.png" alt="iphones-image"/>
+  </div>
+  <div class="instagram-logo">
+    <img class="instagram-image" src="./images/brand.png" alt="instagram-image"/>
+    <button class="login-button"><img src="./images/home.png">Log in</button>
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="instagram-description">
+    <div class="instagram-text">
+      <h2 class="instagram-slogan">Capture and Share the World's Moments </h2>
+      <div class="container">
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="google"> <img class="android-image" src="./images/badge-android.png" alt="android-image"/></div>
+    <div class="ios"> <img class="ios-image" src="./images/badge-iphone.png" alt="ios-image"/></div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
+  <div class="info-footer">
+    <footer>
+      <ol class="info-links">
+        <li class="about-us">About Us</li>
+        <li class="support">Support</li>
+        <li class="blog">Blog</li>
+        <li class="press">Press</li>
+        <li class="api">API</li>
+        <li class="jobs">Jobs</li>
+        <li class="privacy">Privacy</li>
+        <li class="terms">Terms</li>
+      </ol>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
+  </div>
 </body>
 </html>
