--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,32 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  Instagram
+<div>
+  <img class="phones" src="images/phones.png">
+</div>
+<img src="images/brand.png" class="insta">
+<div class="text">
+  <div class="div-capt">
+  <h1 class="capt">Capture and Share the World's Moments</h1>
+  </div>
+  <div>
+  <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
+  </div>
 
   Download on the App Store
   Get it on Google Play
 
+  </div>
+
+  <div class="footer">
   About Us
   Support
   Blog
@@ -27,5 +38,6 @@
   Terms
 
   &copy; 2014 Instagram
+  </div>
 </body>
 </html>
