exercise done(mostly)

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+  <!--Instagram logo and login button-->
   <div class="iphones-image">
     <img src="./images/phones.png" alt="iphones-image"/>
   </div>
@@ -13,7 +13,7 @@
     <img class="instagram-image" src="./images/brand.png" alt="instagram-image"/>
     <button class="login-button"><img src="./images/home.png">Log in</button>
   </div>
-
+  <!--Instagram description, slogan, etc..(mostly formatted text)-->
   <div class="instagram-description">
     <div class="instagram-text">
       <h2 class="instagram-slogan">Capture and Share the World's Moments </h2>
@@ -23,11 +23,12 @@
         <p>Oh yeah, did we mention it's free?</p>
       </div>
     </div>
-
+    <!--Are we on iOS or Android?-->
     <div class="google"> <img class="android-image" src="./images/badge-android.png" alt="android-image"/></div>
     <div class="ios"> <img class="ios-image" src="./images/badge-iphone.png" alt="ios-image"/></div>
 
   </div>
+  <!--Footer (Links and copytight (i couldnt get it to work)-->
   <div class="info-footer">
     <footer>
       <ol class="info-links">
