MAD DE Esperanza Amaya

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="phones">
+    <img src="images/phones.png" alt="Phones for IG">
+  </div>
+  <div>
+    <div class="logo">
+      <img src="images/brand.png" alt="IG brand">
+    </div>
+    <div>
+      <img src="images/home.png" alt="Log in">
+      <a href="#">Log in</a>
+    </div>
+  </div>
+  <div class="boxInfo">
+    <h2 class="textBoxInfo">Capture and Share the World's Moments</h2>
+    <p>
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+    Oh yeah, did we mention it's free?
+    </p>  
+    <button>Download on the App Store</button>
+    <button>Get it on Google Play</button>
+  </div>
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <p class="grey-letter">Copyright 2014 Instagram</p>
+  </footer>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
