--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <main class="home-main">
+    <figure class="iphone-screenshot">
+      <img src="images/phones.png">
+    </figure>
+    <div class="home-main-content">
+      <header class="home-header">
+        <img src="images/brand.png" class="instagram-logo">
+        <a href="#" class="log-in-button">
+          <img src="images/home.png" class="log-in-icon">
+          <span class="log-in-text">Log in</span>
+        </a>
+      </header>
+      <div class="info-box">
+        <h1 class="home-title">Capture and Share the World's Moments</h1>
+        <p class="home-text">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p class="home-text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p class="home-text">Oh yeah, did we mention it's free?</p>
+        <div class="stores-buttons">
+          <a href="#"><img src="images/badge-iphone.png"></a>
+          <a href="#"><img src="images/badge-android.png"></a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="footer-section">
+    <ul class="footer-list">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+</body> 
 </html>
