--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  Instagram
+  <div class="header-insta">
+      <img class="branding" src="images/brand.png" alt="Instagram Logo">     
+      <!-- <img class="home" src="images/home.png" alt="House icon">
+      <button class="button-section" name="Log in">Log in</button> -->
+      <button class="button-section"type="submit"><img class="home" src="images/home.png" alt="" /> Log in</button>
+  </div>
+  </div>
+<div class="">
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
+  <img src="images/phones.png" alt="phone-images">
+  <img src="images/frame.png" alt="frame">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <img src="images/badge-iphone.png" alt="Download on the App Store">
+    <img src="images/badge-android.png" alt="Get it on Google Play">
+  <footer>
+    <ul class="footer-list">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+  </ul>
+  </footer>
+  
 </body>
 </html>
