--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" >
 </head>
 <body>
-  Instagram
-
+  <div></div>
+  <img alt="Mobile Phone Picture" src="images/phones.png">
+  <img alt="Instagram Logo" src="images/brand.png">
+  <button><img alt="Home Icon" src="images/home.png"></button>
+  <section>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
@@ -13,19 +17,25 @@
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
-
+    <img alt="Download for Apple" src="images/badge-iphone.png">
+    <img alt="Download for Android" src="images/badge-android.png">
   Download on the App Store
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </section>
+  <footer>
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      &copy; 2014 Instagram
+    </nav>
+  </footer>
 </body>
 </html>
