Placed the main elements of the layout

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+	<title>Instagram</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+	<div class="bg-top"></div>
+	<div class="container">
+		<div class="movile-pic">
+			<img src="images/phones.png" alt="images of mobiles">
+		</div>
+		<div class="main-wrap"></div>
+		<div class="main">
+			<div class="main-head">
+				<img src="images/brand.png" alt="Image of Instagram Logo">
 
-  Capture and Share the World's Moments
+				<button class="btn-login">
+					<img src="images/home.png" alt="icon with a house to go to the login">
+					<span>Log in</span>
+				</button>
+			</div>
+			<div class="main-text">
+				<h2>Capture and Share the World's Moments</h2>
+			</div>
+			<div class="main-buttons">
+				<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+				</p>
+				<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+					You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+				<p>Oh yeah, did we mention it's free?</p>
+			</div>
+		</div>
+		<div class="footer">
+			<ul>
+				<li>about us</li>
+				<li>support</li>
+				<li>blog</li>
+				<li>press</li>
+				<li>api</li>
+				<li>jobs</li>
+				<li>privacy</li>
+				<li>terms</li>
+			</ul>
+			<span>2014 instagram</span>
+		</div>
+	</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+
+
+
+	Download on the App Store Get it on Google Play About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
 </body>
+
 </html>
