--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,14 +23,15 @@
 				</button>
 			</div>
 			<div class="main-text">
-				<h2>Capture and Share the World's Moments</h2>
-			</div>
-			<div class="main-buttons">
-				<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+				<h1>Capture and Share the World's Moments</h1>
+				<p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 				</p>
 				<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
 					You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 				<p>Oh yeah, did we mention it's free?</p>
+			</div>
+			<div class="main-buttons">
+
 			</div>
 		</div>
 		<div class="footer">
