--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,13 +24,23 @@
 			</div>
 			<div class="main-text">
 				<h1>Capture and Share the World's Moments</h1>
-				<p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+				<p>Instagram is a
+					<strong>fast</strong>,
+					<strong>beautiful</strong> and
+					<strong>fun</strong> way to share your life with friends and family.
 				</p>
 				<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
 					You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 				<p>Oh yeah, did we mention it's free?</p>
 			</div>
 			<div class="main-buttons">
+				<a href="#">
+					<img src="images/badge-iphone.png" alt="Image that shows the link to download the app on the AppStore">
+				</a>
+
+				<a href="#">
+					<img src="images/badge-android.png" alt="Image that shows the link to get it the app on the Google Play">
+				</a>
 
 			</div>
 		</div>
