Added styles to the footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -45,17 +45,19 @@
 			</div>
 		</div>
 		<div class="footer">
-			<ul>
-				<li>about us</li>
-				<li>support</li>
-				<li>blog</li>
-				<li>press</li>
-				<li>api</li>
-				<li>jobs</li>
-				<li>privacy</li>
-				<li>terms</li>
-			</ul>
-			<span>2014 instagram</span>
+			<nav>
+				<ul>
+					<li>about us</li>
+					<li>support</li>
+					<li>blog</li>
+					<li>press</li>
+					<li>api</li>
+					<li>jobs</li>
+					<li>privacy</li>
+					<li>terms</li>
+				</ul>
+			</nav>
+			<span>&copy; 2014 instagram</span>
 		</div>
 	</div>
 
