--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background">
+  </div>
+  <div class="content">
+  <div class="phones">
+<img src="./images/phones.png" alt="phones">
+  </div>
+  
+  <div class="right">
 
-  Capture and Share the World's Moments
+  <img src="./images/brand.png" alt="Instagram">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="button">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <button type="button"><img src="./images/home.png" alt="house">Log in</button>
 
-  Oh yeah, did we mention it's free?
+  </div>
+  <div class="white">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+
+  <img src ="./images/badge-iphone.png"   alt="app store">
+  <img src ="./images/badge-android.png"  alt="google play">
+</div>
+</div>
+</div>
+<footer>
+  <a href=#>About Us</a>
+  <a href=#>About Us</a>
+  <a href=#>Blog</a>
+  <a href=#>Press</a>
+  <a href=#>API</a>
+  <a href=#>Jobs</a>
+  <a href=#>Privacy</a>
+  <a href=#>Terms</a>
+  <span id="gray">&copy; 2014 Instagram</footer>span>
+</footer>
 </body>
 </html>
