Added links to the footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -46,14 +46,14 @@
 		<div class="footer">
 			<nav>
 				<ul>
-					<li>about us</li>
-					<li>support</li>
-					<li>blog</li>
-					<li>press</li>
-					<li>api</li>
-					<li>jobs</li>
-					<li>privacy</li>
-					<li>terms</li>
+					<li><a href="#">about us</a></li>
+					<li><a href="#">support</a></li>
+					<li><a href="#">blog</a></li>
+					<li><a href="#">press</a></li>
+					<li><a href="#">api</a></li>
+					<li><a href="#">jobs</a></li>
+					<li><a href="#">privacy</a></li>
+					<li><a href="#">terms</a></li>
 				</ul>
 			</nav>
 			<span>&copy; 2014 instagram</span>
