--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,47 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!--Blue Gradient-->
+  <section></section>
+  <!--main Section-->
+  <section>
+    <article>
+      <img src="" alt="">
+    </article>
+    <article>
+      <div>
+        <img src="" alt="">
+        <h1>Instagram</h1>
+        <button></button>
+      </div>
+      <!--Card-->
+      <div>
+        <h3> Capture and Share the World's Moments</h3>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div>
+        <a href="">Download on the App Store</a>
+        <a href="">Get it on Google Play</a>
+      </div>
+    </article>
+  </section>
+  <!--Footer-->
+  <footer>
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+    </nav>
+    <p>&copy; 2014 Instagram</p>
+  </footer>
 </body>
 </html>
