--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,28 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel= "stylesheet" type= "text/css" href= "main.css">
 </head>
 <body>
-  Instagram
+    <img class="phones" src="images/phones.png"  alt="phones">
+    <div class="button-box">
+  <img src="images/brand.png"  alt="Instagram">
+  <button type="submit" class="searchButton-icon">Log in</button>
+    </div>
+<div class= "text-container">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  Instagram is a <spam class="bold">fast, beautiful</spam> and <spam class="bold">fun</spam> way to share your life with friends and family.<br>
+  <br>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+ <br>
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+ <div class="text-img">
+  <img src="images/badge-iphone.png" alt="Download on the App Store">
+  <img src="images/badge-android.png" alt="Get it on Google Play">
+</div>
+</div>
+<footer class="footer-text">
   About Us
   Support
   Blog
@@ -25,7 +32,7 @@
   Jobs
   Privacy
   Terms
-
-  &copy; 2014 Instagram
+ <spam class="footer-instagram"> &copy; 2014 Instagram</spam>
+</footer>
 </body>
 </html>
