--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,7 +13,7 @@
 <div class= "text-container">
   <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a <spam class="bold">fast, beautiful</spam> and <spam class="bold">fun</spam> way to share your life with friends and family.<br>
+  Instagram is a <span class="bold">fast, beautiful</span> and <span class="bold">fun</span> way to share your life with friends and family.<br>
   <br>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
  <br>
@@ -32,7 +32,7 @@
   Jobs
   Privacy
   Terms
- <spam class="footer-instagram"> &copy; 2014 Instagram</spam>
+ <span class="footer-instagram"> &copy; 2014 Instagram</span>
 </footer>
 </body>
 </html>
