--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/css/main.css"> 
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="inner-container">
+      <div class="left-side-container">
+        <img id="phones" src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones">
+      </div>
+      <div class="right-side-container">
+        <img src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram">
 
-  Capture and Share the World's Moments
+        <div class="text">
+          <h1> Capture and Share the World's Moments</h1>
+          <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            
+              Oh yeah, did we mention it's free?
+            </p>
+          <img src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="googleplay">
+          <img src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="appstore">
+        </div>
+    </div>
+  </div>
+</div>
+  
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
