--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,41 +6,47 @@
 </head>
 <body>
   <div class="outter-box">
-    <img src="images/phones.png">
+    <img src="images/phones.png" class="phones">
     <div class="inner-box">
       <div class="icons">
-        <img src="images/brand.png">
+        <img src="images/brand.png" class="instagram">
         <button type="button" class="log-in">
           <img src="images/home.png">
           <p>Log in</p>
         </button>
       </div>
+      <div class="description">
+        <h2>Capture and Share the World's Moments</h2>
+
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+  
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  
+        <p>Oh yeah, did we mention it's free?</p>
+  
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
 
 
-      <h2>Capture and Share the World's Moments</h2>
 
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-
-      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
-        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-
-      <p>Oh yeah, did we mention it's free?</p>
-
-      <button>Download on the App Store</button>
-      <button>Get it on Google Play</button>
     </div>
 
   </div>
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+  
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
 </body>
 </html>
