--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,25 +5,25 @@
   <link rel="stylesheet" type="text/css" href="css/main.css" >
 </head>
 <body>
-  <div></div>
-  <img alt="Mobile Phone Picture" src="images/phones.png">
-  <img alt="Instagram Logo" src="images/brand.png">
-  <button><img alt="Home Icon" src="images/home.png"></button>
-  <section>
-  Capture and Share the World's Moments
+  <div class="background"></div>
+  <div class="wrapper">
+    <img alt="Mobile Phone Picture" src="images/phones.png">
+    <img class="insta-logo" alt="Instagram Logo" src="images/brand.png">
+    <button class="button-log"><img alt="Log Icon" src="images/home.png">Log In</button>
+    <section class="main-text">
+        <h1 class="main-title">Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
-    <img alt="Download for Apple" src="images/badge-iphone.png">
-    <img alt="Download for Android" src="images/badge-android.png">
-  Download on the App Store
-  Get it on Google Play
-  </section>
-  <footer>
-    <nav>
+        <p>Oh yeah, did we mention it's free?</p>
+      <img alt="Download for Apple" src="images/badge-iphone.png">
+      <img alt="Download for Android" src="images/badge-android.png">
+    </section>
+  </div>
+  <footer class="page-footer">
+  <nav class="nav-elements  ">
       <ul>
         <li>About Us</li>
         <li>Support</li>
@@ -33,8 +33,8 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
       </ul>
-      &copy; 2014 Instagram
     </nav>
   </footer>
 </body>
