--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
   <h1>Instagram</h1>
-
 <div class = "main">
   <content>
     <div class = "login-menu">
@@ -18,28 +17,27 @@
     </div>
   <div class = "card">
     <h2>Capture and Share the World's Moments</h2>
-    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
     <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
     <p>Oh yeah, did we mention it's free?</p>
-
     <img class="app-links" src="images/badge-iphone.png">
-    <img class="app-links" src="images/badge-iphone.png">
+    <img class="app-links" src="images/badge-android.png">
   </div>
 </content>
 <img class="phones" src="images/phones.png">
 </div>
-  <footer>
-    <ul class = "footer-menu">
-      <li class="footer-menu-item">About Us</li>
-      <li class="footer-menu-item">Support</li>
-      <li class="footer-menu-item">Blog</li>
-      <li class="footer-menu-item">Press</li>
-      <li class="footer-menu-item">API</li>
-      <li class="footer-menu-item">Jobs</li>
-      <li class="footer-menu-item">Privacy</li>
-      <li class="footer-menu-item">Terms</li>
-    </ul>
-    <p class="copyright">&copy; 2014 Instagram</p>
+<footer>
+  <ul class = "footer-menu">
+    <li class="footer-menu-item">About Us</li>
+    <li class="footer-menu-item">Support</li>
+    <li class="footer-menu-item">Blog</li>
+    <li class="footer-menu-item">Press</li>
+    <li class="footer-menu-item">API</li>
+    <li class="footer-menu-item">Jobs</li>
+    <li class="footer-menu-item">Privacy</li>
+    <li class="footer-menu-item">Terms</li>
+  </ul>
+    <p class = "copyright">&copy; 2014 Instagram</p>
   </footer> 
 </body>
 </html>
