--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,34 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="contendedor">
+  <div class="arriba">
+    <img src="./images/brand.png" alt="">
+    <a href="#"><i class="fas fa-home"></i> Log in</a>
+  </div>
+  <div class="imagen">
+      <img src="./images/phones.png" alt="iphone">
+  </div>
+  <div class="cuadro">  
+  <h2>Capture and Share <br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free? </p>
 
   Download on the App Store
   Get it on Google Play
-
+  <img src="./images/badge-iphone.png" alt="">
+  <img src="./images/badge-android.png" alt="">
+  </div>
+  </section>
+  <section class="fondo">
   About Us
   Support
   Blog
@@ -27,5 +40,6 @@
   Terms
 
   &copy; 2014 Instagram
+  </section>
 </body>
 </html>
